; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/mpt2sas/extr_mpt2sas_scsih.c__scsih_send_event_to_turn_on_fault_led.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/mpt2sas/extr_mpt2sas_scsih.c__scsih_send_event_to_turn_on_fault_led.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPT2SAS_ADAPTER = type { i32 }
%struct.fw_event_work = type { %struct.MPT2SAS_ADAPTER*, i32, i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@MPT2SAS_TURN_ON_FAULT_LED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.MPT2SAS_ADAPTER*, i32)* @_scsih_send_event_to_turn_on_fault_led to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_scsih_send_event_to_turn_on_fault_led(%struct.MPT2SAS_ADAPTER* %0, i32 %1) #0 {
  %3 = alloca %struct.MPT2SAS_ADAPTER*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.fw_event_work*, align 8
  store %struct.MPT2SAS_ADAPTER* %0, %struct.MPT2SAS_ADAPTER** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @GFP_ATOMIC, align 4
  %7 = call %struct.fw_event_work* @kzalloc(i32 16, i32 %6)
  store %struct.fw_event_work* %7, %struct.fw_event_work** %5, align 8
  %8 = load %struct.fw_event_work*, %struct.fw_event_work** %5, align 8
  %9 = icmp ne %struct.fw_event_work* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %24

11:                                               ; preds = %2
  %12 = load i32, i32* @MPT2SAS_TURN_ON_FAULT_LED, align 4
  %13 = load %struct.fw_event_work*, %struct.fw_event_work** %5, align 8
  %14 = getelementptr inbounds %struct.fw_event_work, %struct.fw_event_work* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load %struct.fw_event_work*, %struct.fw_event_work** %5, align 8
  %17 = getelementptr inbounds %struct.fw_event_work, %struct.fw_event_work* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 8
  %18 = load %struct.MPT2SAS_ADAPTER*, %struct.MPT2SAS_ADAPTER** %3, align 8
  %19 = load %struct.fw_event_work*, %struct.fw_event_work** %5, align 8
  %20 = getelementptr inbounds %struct.fw_event_work, %struct.fw_event_work* %19, i32 0, i32 0
  store %struct.MPT2SAS_ADAPTER* %18, %struct.MPT2SAS_ADAPTER** %20, align 8
  %21 = load %struct.MPT2SAS_ADAPTER*, %struct.MPT2SAS_ADAPTER** %3, align 8
  %22 = load %struct.fw_event_work*, %struct.fw_event_work** %5, align 8
  %23 = call i32 @_scsih_fw_event_add(%struct.MPT2SAS_ADAPTER* %21, %struct.fw_event_work* %22)
  br label %24

24:                                               ; preds = %11, %10
  ret void
}

declare dso_local %struct.fw_event_work* @kzalloc(i32, i32) #1

declare dso_local i32 @_scsih_fw_event_add(%struct.MPT2SAS_ADAPTER*, %struct.fw_event_work*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
